# SP_2024

./: CMakeLists.txt
aud1/: hello_world.cpp  pr1.cpp  zadacha1.cpp  zadacha2.cpp  zadacha3.cpp  zadacha4.cpp
exam/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp
kol1/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp
labs/: 08.cpp  1.cpp  11.cpp  16.cpp  17.cpp  2.cpp  23.cpp  26.cpp  28.cpp  3.cpp  30.cpp  31.cpp  33.cpp  4.cpp  5.cpp  6.cpp  9.cpp
labs_first_partial/: 07.cpp  10.cpp  12.cpp  13.cpp  14.cpp  15.cpp  18.cpp  19.cpp  20.cpp  21.cpp  22.cpp  24.cpp  25.cpp  27.cpp  29.cpp  32.cpp  34.cpp  35.cpp
labs_second_partial/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  20.cpp  21.cpp  22.cpp  23.cpp  24.cpp  25.cpp  26.cpp  27.cpp  28.cpp  29.cpp  30.cpp  31.cpp  32.cpp  33.cpp  34.cpp  35.cpp  36.cpp  37.cpp  38.cpp  39.cpp  40.cpp  (+6 more)
nizi/: pr1.cpp  pr2.cpp  pr3.cpp  pr4.cpp
