cmake_minimum_required(VERSION 3.26)
project(SP_2023)

set(CMAKE_CXX_STANDARD 17)


add_executable(hello_world aud1/hello_world.cpp)
add_executable(zadacha1 aud1/zadacha1.cpp)
add_executable(zadacha2 aud1/zadacha2.cpp)
add_executable(zadacha3 aud1/zadacha3.cpp)
add_executable(zadacha4 aud1/zadacha4.cpp)
add_executable(pr1 aud1/pr1.cpp)
add_executable(zad1 kol1/zad1.cpp)
add_executable(zad2 kol1/zad2.cpp)
add_executable(zad3 kol1/zad3.cpp)
add_executable(zad4 kol1/zad4.cpp)
add_executable(zad5 kol1/zad5.cpp)
add_executable(zad6 kol1/zad6.cpp)
add_executable(nizi nizi/pr1.cpp)
add_executable(nizi1 nizi/pr2.cpp)
add_executable(nizi2 nizi/pr3.cpp)
add_executable(nizi3 nizi/pr4.cpp)